--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 h1,
